Added more logic for enabling party level case flags functionality